# y2kbugger.github.io

./: .gitignore  .gitmodules  2018-06-15-cohpy.html  2018-09-12-tire-society.html  2018-10-29-cohpy.html  2018-12-11-carpe.html  2019-07-28-pyohio.html  2020-11-06-ohiolinuxfest.html  2021-12-03-ohiolinuxfest.html  2023-06-13-privatespeaker.html  AGENTS.md  CNAME  Makefile  Pipfile  README.md  a-second-article-wondering-what-this-would-look-like-if-the-title-was-longer.html  archives.html  article_history.py  authors.html  baguette.html  banh-mi.html  baremetal-riscv-renode-1.html  baremetal-riscv-renode-2.html  baremetal-riscv-renode-3.html  bread-i.html  categories.html  cherry-roja.html  chicken-paprikas.html  compact-bus-display.html  devserver.py  energy-harvesting-lightswitch.html  energy-havesting-lightswitch.html  exifguard.py  first_arch_user_repository_submission.html  index.html  initial-commit.html  lc3-sql.html  lc3_sql.html  list_rst.sh  mmix-wasm.html  (+16 more)
.cspell/: blog-words.txt
.githooks/: pre-commit
author/: zak-kohler.html
category/: electronics.html  fake.html  food.html  meta.html  not-real.html  programming.html  talks.html  workshop.html
content/: a-second-article.rst  howto.md  howto.rst  initial-commit.rst
drafts/: 2020-11-06-ohiolinuxfest.html  baguette.html  baremetal-riscv-renode-1.html  baremetal-riscv-renode-3.html  baremetal-riscv-renode-4.html  baremetal-riscv-renode-5.html  baremetal-riscv-simulation.html  bread-i.html  chicken-paprikas.html  compact-bus-display.html  compact-bus-display.rst.html  energy-havesting-lightswitch.html  (+15 more)
(+156 files in other folders)
