[project]
name = ""
version = "0.0.1"
requires-python = ">=3.11,<4"
dependencies = [
    "pelican>=4.9.1,<5",
    "pelican-drafts>=0.1.1,<0.2",
    "invoke>=2.2.0,<3",
    "livereload>=2.6.3,<3",
    "ghp-import>=2.1.0,<3",
]

[tool.uv]
package = false

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
